<?xml version="1.0"?>
<package format="2">
  <name>list_parameter_example</name>
  <version>0.0.0</version>
  <description>The list_parameter_example package</description>

  <maintainer email="bob@todo.todo">bob-ROS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
